<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2025-2026 Andrew Gunnerson
    SPDX-License-Identifier: GPL-3.0-only
-->
<resources>
    <!-- Preference headers -->
    <string name="pref_header_permissions">Permissions</string>
    <string name="pref_header_configuration">Configuration</string>
    <string name="pref_header_run_conditions">Run conditions</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>

    <!-- Main preferences -->
    <string name="pref_inhibit_battery_opt_name">Disable battery optimization</string>
    <string name="pref_inhibit_battery_opt_desc">Needed to run reliably in the background.</string>
    <string name="pref_allow_notifications_name">Allow notifications</string>
    <string name="pref_allow_notifications_desc">Needed to run reliably in the background and to start and stop Syncthing.</string>
    <string name="pref_local_storage_access_name">Allow local storage access</string>
    <string name="pref_local_storage_access_desc">Needed for Syncthing to access the local storage under <tt>/sdcard</tt>.</string>
    <string name="pref_disable_app_hibernation_name">Disable app hibernation</string>
    <string name="pref_disable_app_hibernation_desc">Needed to prevent Android from automatically removing app permissions after a period of time.</string>
    <string name="pref_open_web_ui_name">Open web UI</string>
    <string name="pref_open_web_ui_desc">Open Syncthing\'s web configuration interface.</string>
    <string name="pref_import_configuration_name">Import configuration</string>
    <string name="pref_import_configuration_desc">Import an existing Syncthing configuration zip file.</string>
    <string name="pref_export_configuration_name">Export configuration</string>
    <string name="pref_export_configuration_desc">Export current Syncthing configuration to a zip file.</string>
    <string name="pref_service_status_name">Syncthing status</string>
    <string name="pref_auto_mode_name">Auto mode</string>
    <string name="pref_auto_mode_desc">Automatically start and stop based on the specified conditions.</string>
    <string name="pref_network_conditions_name">Network conditions</string>
    <string name="pref_network_conditions_desc">Run when connected to certain network types or Wi-Fi networks.</string>
    <string name="pref_run_on_battery_name">Run on battery power</string>
    <string name="pref_run_on_battery_desc">Run when the device is on battery power and the battery level is at least %1$d%%. Syncthing always runs when plugged in.</string>
    <string name="pref_respect_battery_saver_name">Respect battery saver mode</string>
    <string name="pref_respect_battery_saver_desc">Only run when Android\'s battery saver mode is disabled.</string>
    <string name="pref_respect_auto_sync_data_name">Respect auto-sync data setting</string>
    <string name="pref_respect_auto_sync_data_desc">Only run when Android\'s auto-sync data setting is enabled.</string>
    <string name="pref_sync_schedule_name">Sync on time schedule</string>
    <string name="pref_sync_schedule_desc">Sync for %2$s during every window of %1$s.</string>
    <string name="pref_keep_alive_name">Keep Syncthing alive</string>
    <string name="pref_keep_alive_desc">When Syncthing should not run, pause it instead of shutting it down. The avoids a potential performance hit when scanning large folders on startup.</string>
    <string name="pref_version_name">Version</string>
    <string name="pref_save_logs_name">Save logs</string>
    <string name="pref_save_logs_desc">Save logcat logs to a file.</string>

    <!-- Network condition preferences -->
    <string name="pref_header_allowed_network_types">Allowed network types</string>
    <string name="pref_header_allowed_wifi_networks">Allowed Wi-Fi networks</string>
    <string name="pref_header_available_wifi_networks">Available Wi-Fi networks</string>
    <string name="pref_require_unmetered_network_name">Require unmetered network</string>
    <string name="pref_network_allow_wifi_name">Allow Wi-Fi</string>
    <string name="pref_network_allow_cellular_name">Allow mobile data</string>
    <string name="pref_network_allow_ethernet_name">Allow ethernet</string>
    <string name="pref_network_allow_other_name">Allow other network interfaces</string>
    <string name="pref_location_optional_info">Location permissions are optional and are only needed when restricting allowed Wi-Fi networks. Even if the permissions are granted, they will not be used unless there are allowed Wi-Fi networks configured.</string>
    <string name="pref_allow_precise_location_name">Allow precise location access</string>
    <string name="pref_allow_precise_location_desc">Required for accessing Wi-Fi connection details at all.</string>
    <string name="pref_allow_background_location_name">Allow background location access</string>
    <string name="pref_allow_background_location_desc">Required for accessing Wi-Fi connection details in the background.</string>
    <string name="pref_wifi_networks_info">When using Wi-Fi, only run if connected to the specified networks. If no networks are specified, then all networks are allowed.</string>
    <string name="pref_add_wifi_network_name">Manually add Wi-Fi network</string>

    <!-- Alerts -->
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>

    <!-- Main alerts -->
    <string name="alert_import_success">Successfully imported configuration</string>
    <string name="alert_import_failure">Failed to import configuration</string>
    <string name="alert_import_cancelled">Configuration import cancelled</string>
    <string name="alert_export_success">Successfully exported configuration</string>
    <string name="alert_export_failure">Failed to export configuration</string>
    <string name="alert_export_cancelled">Configuration export cancelled</string>
    <string name="alert_logcat_success">Successfully saved logs to %1$s</string>
    <string name="alert_logcat_failure">Failed to save logs to %1$s</string>

    <!-- Dialogs -->
    <string name="dialog_new_folder_title">New folder</string>
    <string name="dialog_new_folder_message">Enter the name of the new folder to create in %1$s.</string>
    <string name="dialog_new_folder_hint">Name</string>
    <string name="dialog_import_password_title">Config import</string>
    <string name="dialog_import_password_message">The selected zip file is encrypted. Enter the decryption password to import it.</string>
    <string name="dialog_import_password_hint">Decryption password</string>
    <string name="dialog_export_password_title">Config export</string>
    <string name="dialog_export_password_message">Enter a password to encrypt the exported zip file or leave empty to store it unencrypted.</string>
    <string name="dialog_export_password_hint">Encryption password</string>
    <string name="dialog_export_password_confirm_hint">Confirm password</string>
    <string name="dialog_min_battery_level_title">Minimum battery level</string>
    <string name="dialog_min_battery_level_message">Enter the minimum battery level needed for Syncthing to run.</string>
    <string name="dialog_min_battery_level_hint">Percentage</string>
    <string name="dialog_sync_schedule_title">Sync schedule</string>
    <string name="dialog_sync_schedule_message">Enter the cycle and sync duration. The <tt>h</tt> (hours), <tt>m</tt> (minutes), and <tt>s</tt> (seconds) suffixes are accepted.</string>
    <string name="dialog_sync_schedule_hint_cycle">Cycle duration</string>
    <string name="dialog_sync_schedule_hint_sync">Sync duration</string>
    <string name="dialog_wifi_network_title">Wi-Fi network</string>
    <string name="dialog_wifi_network_message">Enter the name (SSID) of the Wi-Fi network. This also works for hidden Wi-Fi networks.</string>
    <string name="dialog_wifi_network_hint">SSID</string>

    <!-- Web UI extra buttons -->
    <string name="web_ui_select_folder">Select folder</string>
    <string name="web_ui_scan_qr_code">Scan QR code</string>

    <!-- Notifications -->
    <string name="notification_channel_persistent_name">Background services</string>
    <string name="notification_channel_persistent_desc">Keeps Syncthing running in the background</string>
    <string name="notification_channel_failure_name">Failure alerts</string>
    <string name="notification_channel_failure_desc">Alerts for errors when starting Syncthing</string>
    <string name="notification_persistent_running_title">Syncthing is running</string>
    <string name="notification_persistent_not_running_title">Syncthing is not running</string>
    <string name="notification_persistent_paused_title">Syncthing is paused</string>
    <string name="notification_persistent_starting_title">Syncthing is starting</string>
    <string name="notification_persistent_stopping_title">Syncthing is stopping</string>
    <string name="notification_persistent_pausing_title">Syncthing is pausing</string>
    <string name="notification_persistent_importing_title">Importing configuration</string>
    <string name="notification_persistent_exporting_title">Exporting configuration</string>
    <string name="notification_failure_run_title">Failed to run Syncthing</string>
    <string name="notification_failure_run_message">Syncthing failed to run properly. To prevent a restart loop, Syncthing has been stopped and placed in manual mode.</string>
    <string name="notification_action_auto_mode">Auto mode</string>
    <string name="notification_action_manual_mode">Manual mode</string>
    <string name="notification_action_start">Start</string>
    <string name="notification_action_stop">Stop</string>

    <!-- Paused/stopped reason -->
    <string name="blocked_reason_manual">• Manually stopped</string>
    <string name="blocked_reason_disconnected">• Not connected to network</string>
    <string name="blocked_reason_metered_network">• Connected to metered network</string>
    <string name="blocked_reason_bad_network_type">• Network type not allowed</string>
    <string name="blocked_reason_bad_wifi_ssid">• Connected to blocked Wi-Fi network</string>
    <string name="blocked_reason_on_battery">• Running on battery power</string>
    <string name="blocked_reason_low_battery">• Battery level is low</string>
    <string name="blocked_reason_battery_saver">• Battery saver mode is on</string>
    <string name="blocked_reason_auto_sync_data">• Auto-sync data is off</string>
    <string name="blocked_reason_time_schedule">• Outside of time schedule</string>

    <!-- Durations -->
    <plurals name="duration_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="duration_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
</resources>
