<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2026 Andrew Gunnerson
    SPDX-License-Identifier: GPL-3.0-only
-->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:title="@string/pref_header_allowed_network_types"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="require_unmetered_network"
            app:defaultValue="true"
            app:title="@string/pref_require_unmetered_network_name"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="network_allow_wifi"
            app:defaultValue="true"
            app:title="@string/pref_network_allow_wifi_name"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="network_allow_cellular"
            app:defaultValue="true"
            app:title="@string/pref_network_allow_cellular_name"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="network_allow_ethernet"
            app:defaultValue="true"
            app:title="@string/pref_network_allow_ethernet_name"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:key="network_allow_other"
            app:defaultValue="true"
            app:title="@string/pref_network_allow_other_name"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="permissions"
        app:title="@string/pref_header_permissions"
        app:iconSpaceReserved="false">

        <Preference
            app:key="info_location_permissions"
            app:persistent="false"
            app:summary="@string/pref_location_optional_info"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="allow_precise_location"
            app:persistent="false"
            app:title="@string/pref_allow_precise_location_name"
            app:summary="@string/pref_allow_precise_location_desc"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="allow_background_location"
            app:persistent="false"
            app:title="@string/pref_allow_background_location_name"
            app:summary="@string/pref_allow_background_location_desc"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="allowed_wifi_networks"
        app:title="@string/pref_header_allowed_wifi_networks"
        app:iconSpaceReserved="false">

        <Preference
            app:key="info_allowed_wifi_networks"
            app:persistent="false"
            app:summary="@string/pref_wifi_networks_info"
            app:iconSpaceReserved="false" />

        <Preference
            app:key="add_new_network"
            app:persistent="false"
            app:title="@string/pref_add_wifi_network_name"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="available_wifi_networks"
        app:title="@string/pref_header_available_wifi_networks"
        app:iconSpaceReserved="false" />
</PreferenceScreen>
